--- a/Assets/WebGLTemplates/CustomTemplate/index.html
+++ b/Assets/WebGLTemplates/CustomTemplate/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/stellar-freighter-api/3.0.0/index.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/stellar-sdk/13.1.0/stellar-sdk.js"></script>
+	<script src="Scripts/stellar-sdk.js"></script>
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
