--- a/Assets/WebGLTemplates/CustomTemplate/index.html
+++ b/Assets/WebGLTemplates/CustomTemplate/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="TemplateData/style.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/stellar-freighter-api/3.0.0/index.min.js"></script>
 	<script src="Scripts/stellar-sdk.js"></script>
+	<script src="https://unpkg.com/@stellar/stellar-xdr-json-web@0.0.2/dist/index.js"></script>
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
